snapshots/parsers/syntax/library/functions/file/getattr/getattr_comparison.snap
---
source: src/syntax/library/functions/file/getattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: GetAttr
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: filename
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: vbNormal
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Normal file\""
